@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-22T00:59:03Z",
+  "timestamp" : "2022-05-22T08:14:04Z",
   "count_outdated" : 281,
   "uniques_outdated" : 144,
-  "count" : 328,
+  "count" : 327,
   "uniques" : 175,
   "clones" : [
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 9, 9 ],
+      "count": 8,
+      "count_minmax": [ 8, 9 ],
       "uniques": 6,
       "uniques_minmax": [ 6, 6 ]
     },
